# verifydtapn

./: .bzrignore  .gitignore  CMakeLists.txt  README  README.md  makefile.linux32  makefile.linux64  makefile.osx32  makefile.osx64  makefile.win32  makefile.win64  rules.mk  toolchain-x86_64-w64-mingw32.cmake
src/: CMakeLists.txt  compile-linux-32-64.sh  compile-mac-32-64.sh  compile-win-32.sh  main.cpp  typedefs.hpp  verifydtapn.cpp
src/Core/: ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt  DiscretePart.cpp  DiscretePart.hpp  IndirectionTable.cpp  IndirectionTable.hpp  Pairing.cpp  Pairing.hpp  PlaceVisitor.cpp  QueryChecker.cpp  QueryChecker.hpp  SymMarking.cpp  SymMarking.hpp  TAPNXmlParser.cpp  TAPNXmlParser.hpp  TokenMapping.cpp  TokenMapping.hpp  VerificationEngine.cpp  VerificationEngine.hpp  VerificationOptions.cpp  VerificationOptions.hpp
src/Core/Query/: AST.cpp  CMakeLists.txt  NormalizationVisitor.cpp  SMCQuery.cpp  TranslationVisitor.cpp
src/Core/QueryParser/: AST.cpp  AST.hpp  BadPlaceVisitor.cpp  BadPlaceVisitor.hpp  CMakeLists.txt  ExpressionSatisfiedVisitor.cpp  ExpressionSatisfiedVisitor.hpp  NormalizationVisitor.cpp  NormalizationVisitor.hpp  QueryGrammar.hpp  TAPNQueryParser.cpp  TAPNQueryParser.hpp  ToStringVisitor.cpp  ToStringVisitor.hpp  UpwardClosedVisitor.cpp  UpwardClosedVisitor.hpp  Visitor.hpp  flex.ll  grammar.yy  lexer_def.h
src/Core/SymbolicMarking/: AbstractMarking.cpp  AbstractMarking.hpp  DBMMarking.cpp  DBMMarking.hpp  DiscreteInclusionMarkingFactory.hpp  DiscreteMarking.hpp  DiscretePart.hpp  DiscretePartInclusionMarking.cpp  DiscretePartInclusionMarking.hpp  MarkingFactory.hpp  NonStrictMarking.cpp  NonStrictMarking.hpp  StoredMarking.cpp  StoredMarking.hpp  SymMarking.cpp  SymMarking.hpp  SymbolicMarking.hpp  TokenMapping.hpp  UppaalDBMMarkingFactory.cpp  UppaalDBMMarkingFactory.hpp
src/Core/TAPN/: CMakeLists.txt  InhibitorArc.cpp  InhibitorArc.hpp  OutputArc.cpp  OutputArc.hpp  Pairing.cpp  Pairing.hpp  StochasticStructure.cpp  TAPNModelBuilder.cpp  TimeInterval.cpp  TimeInterval.hpp  TimeInvariant.cpp  TimeInvariant.hpp  TimedArcPetriNet.cpp  TimedArcPetriNet.hpp  TimedInputArc.cpp  TimedInputArc.hpp  TimedPlace.cpp  TimedPlace.hpp  TimedTransition.cpp  TimedTransition.hpp  TransportArc.cpp  TransportArc.hpp  WatchExpression.cpp
src/Core/TAPNParser/: CMakeLists.txt  TAPNXmlParser.cpp  TAPNXmlParser.hpp  util.cpp  util.hpp
src/DiscreteVerification/: CMakeLists.txt  DeadlockVisitor.cpp  DeadlockVisitor.hpp  DiscreteVerification.cpp  DiscreteVerification.hpp  Generator.cpp  Generator.h  InterestingVisitor.cpp  LivenessWeightQueryVisitor.cpp  LivenessWeightQueryVisitor.hpp  NonStrictBFS.hpp  NonStrictDFS.cpp  NonStrictDFS.hpp  NonStrictDFSHeuristic.hpp  NonStrictDFSRandom.hpp  NonStrictHeuristic.hpp  NonStrictMarking.cpp  NonStrictMarking.hpp  NonStrictRandom.hpp  NonStrictSearch.cpp  NonStrictSearch.hpp  PWList.cpp  PWList.hpp  PlaceVisitor.cpp  PlaceVisitor.hpp  QueryVisitor.cpp  QueryVisitor.hpp  ReducingGenerator.cpp  ReducingGenerator.hpp  SuccessorGenerator.cpp  SuccessorGenerator.hpp  TimeDartSuccessorGenerator.cpp  TimeDartSuccessorGenerator.hpp  WaitingList.cpp  WaitingList.hpp  WeightQueryVisitor.cpp  WeightQueryVisitor.hpp
src/DiscreteVerification/DataStructures/: CMakeLists.txt  CoveredMarkingVisitor.cpp  CoveredMarkingVisitor.h  EncodingStructure.cpp  EncodingStructure.h  MarkingEncoder.h  MarkingStore.h  MetaData.h  NonStrictMarking.cpp  NonStrictMarking.hpp  NonStrictMarkingBase.cpp  NonStrictMarkingBase.hpp  PData.cpp  PData.h  PTrie.h  PTrieMarkingStore.h  PWList.cpp  PWList.hpp  RealMarking.cpp  SimpleMarkingStore.h  TimeDart.hpp  TimeDartLivenessPWList.cpp  TimeDartLivenessPWList.hpp  TimeDartPWList.cpp  TimeDartPWList.hpp  TimeDartWaitingList.cpp  TimeDartWaitingList.hpp  WaitingList.cpp  WaitingList.hpp  WorkflowPWList.cpp  WorkflowPWList.hpp  binarywrapper.h  light_deque.h  ptrie.h  visitor.h
src/DiscreteVerification/Generators/: CMakeLists.txt  GameGenerator.cpp  GameStubbornSet.cpp  Generator.cpp  InterestingVisitor.cpp  NextEnabledGenerator.cpp  RandomRunGenerator.cpp  RangeVisitor.cpp  ReducingGameGenerator.cpp  ReducingGenerator.cpp  SMCRunGenerator.cpp  StubbornSet.cpp
src/DiscreteVerification/SearchStrategies/: CMakeLists.txt  LivenessWeightQueryVisitor.cpp  LivenessWeightQueryVisitor.hpp  NonStrictBFS.hpp  NonStrictDFS.hpp  NonStrictDFSHeuristic.hpp  NonStrictDFSRandom.hpp  NonStrictHeuristic.hpp  NonStrictRandom.hpp  SearchFactory.cpp  SearchFactory.h  SearchStrategies.hpp  SearchStrategy.hpp  SmallestDelayFirst.hpp  WeightQueryVisitor.cpp  WeightQueryVisitor.hpp  WorkflowMinFirst.hpp
src/DiscreteVerification/Util/: CMakeLists.txt  GreatestCommonDivisor.cpp  GreatestCommonDivisor.hpp  IntervalOps.cpp  IntervalOps.hpp
src/DiscreteVerification/VerificationTypes/: AbstractNaiveVerification.hpp  CMakeLists.txt  LivenessSearch.cpp  LivenessSearch.hpp  ProbabilityComparison.cpp  ProbabilityEstimation.cpp  ProbabilityFloatComparison.cpp  ReachabilitySearch.cpp  ReachabilitySearch.hpp  SMCTracesGenerator.cpp  SMCVerification.cpp  SafetySynthesis.cpp  SafetySynthesis.h  TimeDartLiveness.cpp  TimeDartLiveness.hpp  TimeDartReachabilitySearch.cpp  TimeDartVerification.cpp  (+10 more)
src/HashFunctions/: MurmurHash2Neutral.hpp
src/ReachabilityChecker/: SearchStrategy.cpp  SearchStrategy.hpp  Successor.hpp  SuccessorGenerator.cpp  SuccessorGenerator.hpp
src/TAPN/: OutputArc.cpp  OutputArc.hpp  TAPN.cpp  TAPN.hpp  TimeInterval.cpp  TimeInterval.hpp  TimeInvariant.cpp  TimeInvariant.hpp  TimedArcPetriNet.cpp  TimedArcPetriNet.hpp  TimedInputArc.cpp  TimedInputArc.hpp  TimedPlace.cpp  TimedPlace.hpp  TimedTransition.cpp  TimedTransition.hpp
src/Verification/: Node.hpp  PWList.cpp  PWList.hpp  PassedWaitingList.hpp  SearchStrategy.cpp  SearchStrategy.hpp  Successor.hpp  SuccessorGenerator.cpp  SuccessorGenerator.hpp  TraceInfo.hpp  TraceStore.cpp  TraceStore.hpp  WaitingList.cpp  WaitingList.hpp
test/: CMakeLists.txt  build_net.cpp
test/build_net/: arc_guard.xml  covid_test_model.xml  inhib_zeroinf_guard.xml
(+224 files in other folders)
