
add_library(Generators 
                Generator.cpp 
                GameGenerator.cpp 
                ReducingGenerator.cpp 
                InterestingVisitor.cpp 
                NextEnabledGenerator.cpp 
                StubbornSet.cpp
                GameStubbornSet.cpp
                ReducingGameGenerator.cpp)


