
add_library(VerificationTypes LivenessSearch.cpp TimeDartLiveness.cpp TimeDartVerification.cpp WorkflowStrongSoundness.cpp SafetySynthesis.cpp TimeDartReachabilitySearch.cpp WorkflowSoundness.cpp SMCVerification.cpp ProbabilityEstimation.cpp)

target_link_libraries(VerificationTypes Util DataStructures)
